--- a/bts/resources/css/app/common.less
+++ b/bts/resources/css/app/common.less
@@ -10,3 +10,18 @@
   cursor: pointer;
 }
 
+.panel-primary {
+  color: #fff;
+  background-color: #337ab7;
+  border-color: #337ab7;
+}
+
+.panel:focus {
+  outline: none;
+  .panel-heading {
+    color: #fff;
+    background-color: #337ab7;
+    border-color: #337ab7;
+
+  }
+}
